--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 * {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
 ::-webkit-scrollbar {
     width: 0px;
