--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,13 @@
+// DIV STYLES
 .full {
     background-color: black;
     height: 100vh;
     overflow: hidden;
+    position: relative;
 }
 
 .diago-left, .diago-right {
-    z-index: 1;
+    z-index: 3;
 }
 .diago-right {
     clip-path: polygon(
@@ -30,10 +32,48 @@
     height: calc(100vh + 5vw);
 }
 
-#svg {
-    background: #BBD2C5;  /* fallback for old browsers */
+// ORDER OF DIV
+@keyframes show-img-animation {
+    0% { height: 0; }
+    80% {height: 180px; }
+    100% { height: 150px; }
+}
+.show-img-animation {
+    animation: show-img-animation 1s forwards ease-in;
+}
+
+#main {
+    background: #bbd2c5;  /* fallback for old browsers */
     background: -webkit-linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    height: 110vh;
+    min-height: 470px;
+
+    #me-img-container {
+        height: 180px;
+        margin-top: 50px;
+    }
+    #me-img {
+        height: 0;
+        border-radius: 50%;
+        margin-bottom: 30px;
+        -webkit-filter: drop-shadow(1px 1px 4px black);
+        filter: drop-shadow(1px 1px 4px black);
+    }
+    p {
+        font-size: 20px;
+        margin-top: 10px;
+        font-weight: 700;
+        color: #0d2732;
+        &.name {
+            font-size: 35px;
+            letter-spacing: 5px;
+        }
+        a {
+            text-decoration: underline;
+            color: #1a4f65;
+        }
+    }
 }
 
 #card-container {
@@ -44,8 +84,15 @@
 }
 
 #balls {
-    background-color: blue;
+    background-color: #bbd2c5;
+    background: -webkit-linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    background: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     text-align: center;
     height: 100vh;
     padding: 10px;
+}
+
+#contact {
+    height: 110vh;
+    max-height: none;
 }
