--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Lato:100');
 
 * {
     margin: 0;
     padding: 0;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 ::-webkit-scrollbar {
     width: 0px;
