--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -104,7 +104,8 @@ $triangle-size: 6vh;
         background-color: rgb(100, 150, 200);
         text-align: center;
         overflow: auto;
-        height: calc(100vh + #{$triangle-size});
+        height: calc(100% + #{$triangle-size});
+        padding-bottom: 100px;
         min-height: 470px;
         clip-path: polygon(
             0 $triangle-size,
@@ -114,6 +115,31 @@ $triangle-size: 6vh;
             66% 100%,
             0 calc(100% - #{$triangle-size})
         );
+        
+        .cards-container {
+            margin: 0 10%;
+            padding: 0;
+            width: 100%;
+            min-height: 500px;
+            
+            // masonry
+            column-count: 4;
+            column-gap: 1em;
+            
+            .card-shadow {
+                display: inline-block;
+                width: 100%;
+
+                width: 100%;
+                // box-sizing: border-box;
+                // -moz-box-sizing: border-box;
+                // -webkit-box-sizing: border-box;
+            }
+            
+            #ajc-logo {
+                width: 50%;
+            }
+        }
     }
 }
 
