--- a/src/pages/Price/scss/price.scss
+++ b/src/pages/Price/scss/price.scss
@@ -13,47 +13,50 @@ $button-top-transition: -5px;
 
 @keyframes choice-done {
     0% {
-        top: 0;
+        top: 50%;
         opacity: 100%;
-        display: auto;
     }
     100% {
-        top: -500px;
+        top: -100%;
         opacity: 0;
-        display: none;
     }
 }
 
 @keyframes choice-new {
     0% {
-        top: 0;
+        top: 50%;
         opacity: 100%;
-        display: auto;
     }
     100% {
-        top: 500px;
+        top: 100%;
         opacity: 0;
-        display: none;
     }
 }
 
-div.container-choices {
+div.big-container {
     margin: 0;
     width: 100vw;
     height: 100vh;
     background: #25A3FF;
     overflow: hidden;
+    text-align: center;
+    
+    div.vertical-center {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 }
 
 .choices {
     text-align: center;
-    padding-top: 25vh;
     position: relative;
+
     &.choice-done {
         animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;  
     }
     &.choice-new {
-        animation: choice-new 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;  
+        animation: choice-new 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
     }
     
     p.question, p#range-value {
@@ -69,33 +72,81 @@ div.container-choices {
         margin-bottom: 50px;
         animation: underline 1s cubic-bezier(.07,.14,.37,.97) 0s forwards;
     }
-    .button-choice {
-        width: 10vw;
-        min-width: 150px;
-        max-width: 300px;
-        height: 5vw;
-        min-height: 50px;
-        max-height: 100px;
-        background-color: white;
-        border: 1px solid white;
-        border-radius: 5px;
-        box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
-        margin: 0 5vw 5vw 5vw;
-        cursor: pointer;
-        font: bold 16px 'Montserrat';
-        color: #25A3FF;
-        transition: transform .5s;
-        &:hover {
-            transform: translate(0, $button-top-transition);
-            -webkit-transform: translate(0, $button-top-transition);
-            -moz-transform: translate(0, $button-top-transition);
-            -ms-transform: translate(0, $button-top-transition);
-            -o-transform: translate(0, $button-top-transition);
-        }
+}
+.button-choice {
+    width: 10vw;
+    min-width: 150px;
+    max-width: 300px;
+    height: 5vw;
+    min-height: 50px;
+    max-height: 100px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
+    margin: 0 5vw 5vw 5vw;
+    display: table-cell;
+    vertical-align: middle;
+    cursor: pointer;
+    font: bold 16px 'Montserrat';
+    color: #25A3FF;
+    transition: transform .5s;
+    &:hover {
+        transform: translate(0, $button-top-transition);
+        -webkit-transform: translate(0, $button-top-transition);
+        -moz-transform: translate(0, $button-top-transition);
+        -ms-transform: translate(0, $button-top-transition);
+        -o-transform: translate(0, $button-top-transition);
     }
 }
 
-/*Chrome*/
+div.final {
+    &.final-new {
+        animation: choice-new 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+    }
+
+    p {
+        color: white;
+        font-family: 'Montserrat';
+        font-size: 30px;
+        text-align: center;
+        position: relative;
+    }
+    
+    button {
+        width: auto;
+        padding: 0 2%;
+        margin: 0 1vw;
+        max-width: none;
+    }
+}
+
+div.progress-bar {
+    $radius: 5px;
+
+    width: 80vw;
+    height: 20px;
+    background-color: white;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 10%;
+    border-radius: $radius;
+    
+    .progress-bar-filled {
+        border-radius: $radius;
+        height: 100%;
+        background-color: #4CAF50;
+        color: white;
+        font-family: 'Montserrat';
+    }
+}
+
+// RANGE
+input[type="range"] {
+    max-width: 90%;
+}
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     input[type="range"] {
         -webkit-appearance: none;
