--- a/src/pages/Price/scss/price.scss
+++ b/src/pages/Price/scss/price.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 $button-top-transition: -5px;
+$mobile-width: 700px;
+$mobile-top: 10%;
 
 @keyframes underline {
     0% {
@@ -21,10 +23,30 @@ $button-top-transition: -5px;
         opacity: 0;
     }
 }
+@keyframes choice-done-mobile {
+    0% {
+        top: $mobile-top;
+        opacity: 100%;
+    }
+    100% {
+        top: -100%;
+        opacity: 0;
+    }
+}
 
 @keyframes choice-new {
     0% {
         top: 50%;
+        opacity: 100%;
+    }
+    100% {
+        top: 100%;
+        opacity: 0;
+    }
+}
+@keyframes choice-new-mobile {
+    0% {
+        top: $mobile-top;
         opacity: 100%;
     }
     100% {
@@ -51,6 +73,11 @@ div.big-container {
         position: relative;
         top: 50%;
         transform: translateY(-50%);
+
+        @media (max-width: $mobile-width) {
+            transform: initial;
+            top: 10px;
+        }
     }
 }
 
@@ -60,15 +87,25 @@ div.big-container {
 
     &.choice-new {
         animation: choice-new 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+        @media (max-width: $mobile-width) {
+            animation: choice-new-mobile 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+        }
     }
     &.choice-done {
-        animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;  
+        animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;
+        @media (max-width: $mobile-width) {
+            animation: choice-done-mobile 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;
+        }
     }
     
     p.question, p#range-value {
         color: white;
         font-family: 'Montserrat';
         font-size: 30px;
+        
+        @media (max-width: $mobile-width) {
+            font-size: 15px;
+        }
     }
 }
 .question-underline {
@@ -87,6 +124,13 @@ div.big-container {
     height: 5vw;
     min-height: 50px;
     max-height: 100px;
+
+    // @media (max-width: $mobile-width) {
+    //     min-width: 100px;
+    //     min-height: 35px;
+    //     font-size: 12px;
+    // }
+
     background-color: white;
     border: 1px solid white;
     border-radius: 5px;
@@ -105,14 +149,32 @@ div.big-container {
         -ms-transform: translate(0, $button-top-transition);
         -o-transform: translate(0, $button-top-transition);
     }
+
+    &:disabled {
+        background: #e3e3e3;
+        border: initial;
+        color: #8e8e8e;
+        box-shadow: initial;
+        transition: initial;
+        &:hover {
+            transform: initial;
+            cursor: initial;
+        }
+    }
 }
 
 div.final {
     &.final-new {
         animation: choice-new 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+        @media (max-width: $mobile-width) {
+            animation: choice-new-mobile 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+        }
     }
     &.final-done {
-        animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;  
+        animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;
+        @media (max-width: $mobile-width) {
+            animation: choice-done-mobile 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;
+        }
     }
 
     p {
@@ -159,16 +221,22 @@ div.request {
 
     &.request-new {
         animation: choice-new 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+        @media (max-width: $mobile-width) {
+            animation: choice-new-mobile 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards reverse;
+        }
     }
     &.request-done {
-        animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;  
+        animation: choice-done 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;
+        @media (max-width: $mobile-width) {
+            animation: choice-done-mobile 1s cubic-bezier(.4,-0.14,.99,-0.19) 0s forwards;
+        }
     }
 
     p {
         color: white;
         font-family: 'Montserrat';
         font-size: 25px;
-        @media (max-width: 640px) {
+        @media (max-width: $mobile-width) {
             font-size: 15px;
         }
 
@@ -201,6 +269,10 @@ div.request {
     button {
         margin-top: 20px;
     }
+}
+
+.text-center {
+    text-align: center;
 }
 
 // RANGE
