--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -61,6 +61,28 @@ $triangle-size: 6vh;
             color: #1a4f65;
         }
     }
+        
+    .contact-all-data {
+        .contact-data {
+            width: 49%;
+            display: inline-block;
+            p {
+                color: navy;
+            }
+            i {
+                margin-right: 10px;
+                color: navy;
+            }
+        }
+        & p.contact-data:nth-of-type(1) {
+            text-align: right;
+            margin-right: 1%;
+        }
+        & p.contact-data:nth-of-type(2) {
+            text-align: left;
+            margin-left: 1%;
+        }
+    }
 }
 
 #achievments-split {
@@ -89,8 +111,8 @@ $triangle-size: 6vh;
 
 #about {
     z-index: 2;
+    height: calc(100vh + #{$triangle-size});
     filter: drop-shadow(0 -5px 5px rgba(0,0,0,0.8)) drop-shadow(0 5px 5px rgba(0,0,0,0.8));
-    height: auto;
     background-color: transparent;
     margin-top: -$triangle-size;
 
@@ -111,9 +133,8 @@ $triangle-size: 6vh;
             0 $triangle-size,
             33% 0,
             100% $triangle-size,
-            100% calc(100% - #{$triangle-size}),
-            66% 100%,
-            0 calc(100% - #{$triangle-size})
+            100% 100%,
+            0 100%
         );
         
         .cards-container {
